objects/DMAPP__DM_Genius_Qualifier_Config__c.object
<CustomObject>
    <description>Holds config values which associate Genius qualifiers with different industry templates</description>
    <fields>
        <fullName>DMAPP__Buyer_Type__c</fullName>
        <label>Buyer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DMGQualifierID__c</fullName>
        <label>DMGQualifierID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Deal_Size__c</fullName>
        <label>Deal Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Genius_Qualifier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Genius Qualifier</label>
        <referenceTo>DMAPP__DM_Genius_Qualifier__c</referenceTo>
        <relationshipLabel>Genius Qualifiers Config</relationshipLabel>
        <relationshipName>Genius_Qualifiers_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Importance__c</fullName>
        <label>Importance</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sales_Cycle_Length__c</fullName>
        <label>Sales Cycle Length</label>
        <picklist>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Stage_Number__c</fullName>
        <label>Stage Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Template_Type__c</fullName>
        <label>Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>High Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Genius Qualifier Config</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Genius Qualifier Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genius Qualifiers Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>